Implementing annotation system

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 ./backend/segment/segment_utils/ui_models/*
 ./backend/segment/models/*
 ./testing/*
+./backend/results/segmented_models/*
 
 # Byte-compiled / optimized / DLL files
 */__pycache__/*
