--- a/fa3ds.yml
+++ b/fa3ds.yml
@@ -12,6 +12,7 @@ dependencies:
   - matplotlib=3.5.2
   - jupyter=1.0.0
   - pip=21.1.2
+  - warp-lang
   - pip:
     - git+https://github.com/openai/CLIP.git@d50d76daa670286dd6cacf3bcd80b5e4823fc8e1
     - git+https://github.com/NVIDIAGameWorks/kaolin@a00029e5e093b5a7fe7d3a10bf695c0f01e3bd98
